--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "http-string-parser": ""
+    "http-string-parser": "0.0.5"
   },
   "repository": {
     "type": "git",
